# SpaceMAP

./: DeMAP.py  main.py  pyproject.toml
spacemap/: __init__.py  _layouts.py  _spacemap.py  _utils.py
spacemap/umap_utils/: aligned_umap.py  layouts.py  parametric_umap.py  plot.py  sparse.py  spectral.py  umap_.py
